# discord-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
src/commands/: info.rs  math.rs  mod.rs  moderation.rs  neko.rs  owner.rs  utilities.rs
src/handlers/: event_handler.rs  hooks.rs  mod.rs
src/utilities/: containers.rs  git.rs  global_data.rs  mod.rs  parsing.rs
