[package]
name = "graf-zeppelin"
version = "0.1.0-beta"
edition = "2021"
homepage = "https://github.com/panzer-chan/graf_zeppelin"
repository = "https://github.com/panzer-chan/graf_zeppelin.git"
license = "GPL 3.0"
authors = ["panzer-chan"]
description = "Graf Zeppelin. Multipurpose Rust Discord Bot."
keywords = ["discord", "discord-api", "bot", "serenity"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "^0.3"
serenity = { version = "^0.12.0", features = ["cache", "framework", "standard_framework", "rustls_backend", "utils", "http", "collector"] }
dotenv = { version = "^0.15.0" }
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
rustrict = "0.7.19"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "sqlite", "macros" ] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.31"
git2 = "0.18.1"
itertools = "^0.12.0"
serde_json = "1.0.108"
serde = "1.0.193"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3